# AI-Job-recommender

./: .env  .env_example  .gitignore  app.py  pyproject.toml  requirements.txt
src/: helper.py  job_api.py
